--- a/javascript/package.json
+++ b/javascript/package.json
@@ -9,6 +9,7 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "eslint": "^8.18.0",
         "jest": "^27.0.6"
     }
 }
